--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
     "simple-import-sort/exports": "error",
     "prettier/prettier": ["error", {}, { "usePrettierrc": true }],
     "simple-import-sort/imports": [
-      "error",
+      "warn",
       {
         "groups": [
           // Node.js builtins and third-party packages
@@ -32,7 +32,7 @@
           ["^"], // <-- to match regular imports (not starting with a special character)
 
           // Your internal path aliases
-          ["^(@modules|@common|@src|@api-docs)(/.*|$)"],
+          ["^(@modules|@common|@lib|@src|@api-docs)(/.*|$)"],
 
           // Relative imports
           ["^\\.\\.(?!/?$)", "^\\.\\./?$"],
