--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^6.3.1",
+    "@gitbeaker/node": "^35.8.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "google-spreadsheet": "^4.1.1",
+    "googleapis": "^131.0.0",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
+    "openai": "^4.26.0",
     "pino-http": "^9.0.0",
     "swagger-ui-express": "^5.0.0",
     "zod": "^3.22.4"
