--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "@api-docs/*": ["src/api-docs/*"],
       "@common/*": ["src/common/*"],
       "@modules/*": ["src/modules/*"],
+      "@lib/*": ["src/lib/*"],
       "@src/*": ["src/*"]
     },
     "moduleResolution": "Node",
